提交need时数据库创建collection只有posts,去掉offerhelp的判断;needs广场只出现非approved帖子,以列表形式展示,details按钮样式和主题统一

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="assets/css/css/Login-Form-Basic-icons.css">
   <link rel="stylesheet" href="assets/css/Account-setting-or-edit-profile.css">
   <link rel="stylesheet" href="assets/css/Profile-with-data-and-skills.css">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCr2g90Usvd7Csc65p7CN53Yw0Xs7iPI9o&libraries=places"></script>
   <title>Leisure Loot</title>
 </head>
 
